hphp/hack/test/typecheck/attributes/typeparam_method.php.exp
File "typeparam_method.php", line 9, characters 23-23:
Too few arguments (Typing[4104])
File "typeparam_method.php", line 5, characters 19-29:
Definition is here
